# PlasmaWallpaper_CityGrow

./: .gitignore  CMakeLists.txt  LICENSE  Messages.sh  README.md
i18n_tools/: compile_messages.sh  merge.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: WindowModel.qml  config.qml  main.qml
package/contents/ui/code/: city.js
